WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283100
WebCoreDecompression will assert if called again after an error.
https://bugs.webkit.org/show_bug.cgi?id=283100
Summary
WebCoreDecompression will assert if called again after an error.
Jean-Yves Avenard [:jya]
Reported
2024-11-13 21:51:47 PST
If a WebCoreDecompressionSession is called again after an error by the VideoMediaSampleRenderer, it will assert when using a VideoToolbox decoder. When the VideoMediaSampleRenderer receives an error from the WebCoreDecompressionSession, it leaves the WCDS in a broken state, where if used again, it will assert; this is a regression from
bug 281497
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-13 21:52:27 PST
<
rdar://problem/139852592
>
Jean-Yves Avenard [:jya]
Comment 2
2024-11-13 22:03:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36630
EWS
Comment 3
2024-11-14 17:05:06 PST
Committed
286622@main
(f2de760dbdc1): <
https://commits.webkit.org/286622@main
> Reviewed commits have been landed. Closing PR #36630 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug